--- a/public/plantillas/radicacion.html
+++ b/public/plantillas/radicacion.html
@@ -82,6 +82,12 @@
  <div>
    <button class="btn btn-primary" ng-click="validarRadicacion()" ng-hide="requisitos_seleccionados.length == 0">Enviar</button>
  </div>
+
+ <!-- Div de logout -->
+ <div ng-controller="homeController">
+    <input type="button" value="Cerrar Sesion" ng-click="logout()">
+</div>
+
 <!-- <div ng-repeat-end></div>-->
 </body>
 </html>
