Validando datos obligatorios
Validando datos obligatorios e informando al cliente con efectos
visuales

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  
 </head>
 
 <body>
@@ -51,6 +52,9 @@
 
 <!--directivas-->
 <script src="javascripts/radicacion/directivas/directiva.js"></script>
+
+<!--Manejadora de errores del Login-->
+<script src="javascripts/radicacion/manejadorErrores.js"></script>
 
 
 <script src="javascripts/lib's/angular-cookies.js"></script>
