--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  
+      <link rel="stylesheet" href="stylesheets/errores.css">
 </head>
 
 <body>
